--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <title>title this post</title>
 </head>
 <body>
+        <h1>finished</h1>
         <h1> aqui vamos a hacer un blog post</h1>
         <div>vamos lo pibes</div>
 
