add hotlink jeje

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <h1> aqui vamos a hacer un blog post</h1>
-
+        <a href="">are you ready, babe?</a>
 
 </body>
 </html>
